2007-06-18  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am: remove non-existing gnome-settings-xsettings.h

2007-06-15  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-screensaver.c:
	(gnome_settings_module_screensaver_start): don't leak the GError

2007-06-11  Bastien Nocera  <hadess@hadess.net>

	* gnome-settings-multimedia-keys.c: (do_action): Force launching
	nautilus in the home directory, rather than relying on it
	opening there (Closes: #356069)

2007-06-06  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-settings-default-editor.c:
	* gnome-settings-gtk1theme.c:
	* gnome-settings-mouse.c:
	* gnome-settings-sound.c:
	* gnome-settings-xsettings.c: converted more modules to the new arch.

	* gnome-settings-daemon.c (gnome_settings_daemon_new): now this is much
	cleaner.

2007-06-05  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-settings-font.c:
	* gnome-settings-daemon.c: converted font module to a loadable module.

2007-05-28  Jan Arne Petersen  <jpetersen@jpetersen.org>

	* actions/acme-volume-gstreamer.c: (acme_volume_gstreamer_open): set
	the device property to the correct value before opening the mixer.
	(closes bug #441552)

2007-05-28  Jens Granseuer  <jensgr@gmx.net>

	* GNOME_SettingsDaemon.server.in: remove file

2007-05-25  Jens Granseuer  <jensgr@gmx.net>

	* eggaccelerators.c: (egg_accelerator_parse_virtual): sync with libegg
	code (closes bug #441042)

2007-05-17  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Chad Miller
                            
	* gnome-settings-dbus.c: (gnome_settings_server_init): double-check
	that DBUS really passed us an error (closes bug #439208)

2007-05-17  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-settings-daemon.c: declare module types registration functions.

	* gnome-settings-screensaver.c: use correct parent for
	GnomeSettingsModuleScreensaverClass.

2007-05-13  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-multimedia-keys.c: (do_eject_action): use "eject -T" as