@@ -26,6 +26,7 @@ int main (int argc, char *argv [])
 	bind_textdomain_codeset (GETTEXT_PACKAGE, "UTF-8");
 	textdomain (GETTEXT_PACKAGE);
 
+	g_thread_init (NULL);
 	program = gnome_program_init ("gnome-settings-daemon", VERSION,
 				      LIBGNOMEUI_MODULE,
 				      argc, argv,
